[package]
name = "get_len_base_10_as_usize_macros"
version = "0.1.3"
edition = "2021"
description = "Macros for `get_len_base_10_as_usize` crate"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
get_len_base_10_as_usize = "0.1.1"
is_signed_trait = "0.1.0"
midpoint = "0.1.5"
quote = "1.0.15"
proc-macro2 = "1.0.36"

[lib]
proc-macro = true

[features]
all = ["const_trait_impl", "const_fn_trait_bound", "unchecked_math", "const_inherent_unchecked_arith"]
const_trait_impl = ["midpoint/const_trait_impl"]
const_fn_trait_bound= ["midpoint/const_fn_trait_bound"]
unchecked_math = ["midpoint/unchecked_math"]
const_inherent_unchecked_arith = ["midpoint/const_inherent_unchecked_arith"]